--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,10 +1,11 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="imgsize">160dp</dimen>
+    <dimen name="imgsize">200dp</dimen>
     <dimen name="icon">24dp</dimen>
     <dimen name="icon_large">48dp</dimen>
     <dimen name="icon_next">80dp</dimen>
     <dimen name="small">15dp</dimen>
     <dimen name="medium">20dp</dimen>
     <dimen name="big">50sp</dimen>
+    <dimen name="dia">40dp</dimen>
 </resources>
