bottomNavigation y funcionalidad menu info

--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:title="@string/tratamiento"
-        android:icon="@drawable/ic_assignment"/>
-    <item android:title="@string/progreso"
+    <item
+        android:id="@+id/btnTratamiento"
+        android:title="@string/tratamiento"
+        android:icon="@drawable/ic_assignment"
+        />
+    <item
+        android:id="@+id/btnProgreso"
+        android:title="@string/progreso"
         android:icon="@drawable/ic_trending"/>
-    <item android:title="@string/perfil"
+    <item
+        android:id="@+id/btnPerfil"
+        android:title="@string/perfil"
         android:icon="@drawable/ic_person"/>
 </menu>
