--- a/app/src/main/res/layout/activity_vervideoejercicio.xml
+++ b/app/src/main/res/layout/activity_vervideoejercicio.xml
@@ -1,9 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.camilo.sirem.VerVideoEjercicioActivity">
+    >
+    <data>
+        <variable
+            name="video"
+            type="com.example.camilo.sirem.models.Ejercicio"/>
+    </data>
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="com.example.camilo.sirem.VerVideoEjercicioActivity">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <VideoView
+                android:id="@+id/videoP"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:vdUrl="@{video.video}"
+
+                />
+            <Button
+                android:text="Siguiente"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:gravity="bottom"/>
+
+        </FrameLayout>
+    </android.support.design.widget.CoordinatorLayout>
+</layout>
+
