--- a/app/src/main/res/layout/template_ejercicios.xml
+++ b/app/src/main/res/layout/template_ejercicios.xml
@@ -12,10 +12,11 @@
                 name="handler"
                 type="com.example.camilo.sirem.adapters.EjercicioAdapter"/>
         </data>
+
     <android.support.constraint.ConstraintLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <android.support.v7.widget.CardView
             android:id="@+id/card"
@@ -29,7 +30,9 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -158,11 +161,11 @@
 
                 <Button
                     android:id="@+id/btnVerVideo"
-                    android:onClick="@{(view)->handler.onItemClick((int)view.tag)}"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:layout_marginTop="8dp"
+                    android:onClick="@{(view)->handler.onItemClick((int)view.tag)}"
                     android:text="@string/vervideo"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -186,12 +189,12 @@
                     android:id="@+id/iconCheck"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginTop="8dp"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/descripcionSr"
-                    app:srcCompat="@drawable/ic_check"
-                    android:layout_marginEnd="8dp" />
+                    app:srcCompat="@drawable/ic_check" />
             </android.support.constraint.ConstraintLayout>
         </android.support.v7.widget.CardView>
 
