--- a/app/src/main/res/layout/template_evaluar.xml
+++ b/app/src/main/res/layout/template_evaluar.xml
@@ -74,13 +74,14 @@
                     app:srcCompat="@drawable/ic_check" />
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/btnVerVideoEv"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginTop="8dp"
-                    android:text="Button"
+                    android:onClick="@{(view)->handler.onItemClick(( int )view.tag )}"
+                    android:text="@string/vervideo"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/descripcionEv"
