--- a/app/src/main/res/layout/activity_vervideoevaluar.xml
+++ b/app/src/main/res/layout/activity_vervideoevaluar.xml
@@ -36,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:gravity="bottom"
-
+                android:onClick="@{()->handler.goToEspere()}"
                 />
         </FrameLayout>
 
