Intento coneccion btn continuar Segundo Angulo

--- a/app/src/main/res/layout/activity_espere.xml
+++ b/app/src/main/res/layout/activity_espere.xml
@@ -1,34 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.camilo.sirem.EspereActivity">
-    <LinearLayout
+    >
+    <data>
+
+    </data>
+
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_vertical"
-        android:padding="@dimen/small">
+        tools:context="com.example.camilo.sirem.EspereActivity">
 
-        <TextView
-            android:id="@+id/txtEspere"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="5"
-            android:textAlignment="center"
-            android:textSize="@dimen/big"
-            android:layout_marginBottom="@dimen/medium" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center_vertical"
+            android:padding="@dimen/small">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Espere 5 segundos"
-            android:textAlignment="center"
-            android:textSize="30sp"
-            android:layout_marginBottom="@dimen/medium" />
+            <TextView
+                android:id="@+id/txtEspere"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="5"
+                android:textAlignment="center"
+                android:textSize="@dimen/big"
+                android:layout_marginBottom="@dimen/medium" />
 
-    </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Espere 5 segundos"
+                android:textAlignment="center"
+                android:textSize="30sp"
+                android:layout_marginBottom="@dimen/medium" />
+
+        </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
+</layout>
+
