--- a/app/src/main/res/layout/activity_segundoangulo.xml
+++ b/app/src/main/res/layout/activity_segundoangulo.xml
@@ -1,29 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:gravity="center_vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/txtSegundoAngulo"
+    >
+<data>
+<variable
+    name="handlerSegundoAngulo"
+    type="com.example.camilo.sirem.EspereActivity"/>
+</data>
+    <LinearLayout
+        android:orientation="vertical"
+        android:gravity="center_vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="49"
-        android:textAlignment="center"
-        android:textSize="@dimen/big"
-        android:layout_marginBottom="@dimen/medium" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Resultado"
-        android:textAlignment="center"
-        android:textSize="30sp"
-        android:layout_marginBottom="@dimen/medium" />
-    <Button
-       android:layout_gravity="end"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Continuar"/>
-</LinearLayout>
+        <TextView
+            android:id="@+id/txtSegundoAngulo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="49"
+            android:textAlignment="center"
+            android:textSize="@dimen/big"
+            android:layout_marginBottom="@dimen/medium" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Resultado"
+            android:textAlignment="center"
+            android:textSize="30sp"
+            android:layout_marginBottom="@dimen/medium" />
+
+        <Button
+            android:layout_gravity="end"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Continuar"
+            android:onClick="@{()->handlerSegundoAngulo.goToMainEvaluar()}"
+             />
+    </LinearLayout>
+</layout>
