--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,11 @@
     name="handlerMain"
     type="com.example.camilo.sirem.MainActivity"/>
     </data>
-    <android.support.design.widget.CoordinatorLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.camilo.sirem.MainActivity">
+        tools:context="com.example.camilo.sirem.MainActivity"
+        android:orientation="vertical">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -21,20 +22,15 @@
 
             >
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay"
-                />
+
 
         </android.support.design.widget.AppBarLayout>
 
         <FrameLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
 
         </FrameLayout>
@@ -45,8 +41,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             app:menu="@menu/menu_navigation"
-             />
+             >
 
-    </android.support.design.widget.CoordinatorLayout>
+        </android.support.design.widget.BottomNavigationView>
+
+    </LinearLayout>
 </layout>
 
