--- a/app/src/main/res/layout/activity_progreso.xml
+++ b/app/src/main/res/layout/activity_progreso.xml
@@ -9,28 +9,25 @@
             type="com.example.camilo.sirem.ProgresoActivity"/>
     </data>
 
-    <android.support.design.widget.CoordinatorLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.camilo.sirem.ProgresoActivity">
+        tools:context="com.example.camilo.sirem.ProgresoActivity"
+        android:orientation="vertical">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay">
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+
 
         </android.support.design.widget.AppBarLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:orientation="vertical">
             <TextView
                 android:layout_width="match_parent"
@@ -61,6 +58,6 @@
             android:layout_gravity="bottom"
             app:menu="@menu/menu_navigation" />
 
-    </android.support.design.widget.CoordinatorLayout>
+    </LinearLayout>
 </layout>
 
