--- a/app/src/main/res/layout/activity_espere.xml
+++ b/app/src/main/res/layout/activity_espere.xml
@@ -21,7 +21,9 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center_vertical"
-            android:padding="@dimen/small">
+            android:padding="@dimen/small"
+            tools:layout_editor_absoluteY="8dp"
+            tools:layout_editor_absoluteX="8dp">
 
             <TextView
                 android:id="@+id/txtEspere"
@@ -46,7 +48,9 @@
             android:orientation="vertical"
             android:gravity="center_vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteY="89dp"
+            tools:layout_editor_absoluteX="8dp">
 
             <TextView
                 android:id="@+id/txtPrimerInicia"
@@ -70,7 +74,9 @@
             android:orientation="vertical"
             android:gravity="center_vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteY="89dp"
+            tools:layout_editor_absoluteX="8dp">
 
             <TextView
                 android:id="@+id/txtPrimerAngulo"
@@ -94,7 +100,9 @@
             android:orientation="vertical"
             android:gravity="center_vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteY="89dp"
+            tools:layout_editor_absoluteX="8dp">
 
             <TextView
                 android:id="@+id/txtSegundoInicia"
@@ -118,7 +126,9 @@
             android:orientation="vertical"
             android:gravity="center_vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteY="89dp"
+            tools:layout_editor_absoluteX="8dp">
 
             <TextView
                 android:id="@+id/txtSegundoAngulo"
